--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+		/>
 		<script src="/script/getCityCoordinates.js" type="module"></script>
 		<script src="/script/getWeatherData.js" type="module"></script>
 		<script src="/script/getImportantData.js" type="module"></script>
@@ -39,10 +43,94 @@
 				</div>
 			</div>
 		</nav>
+		<div class="container-sm card text-center mt-3">
+			<div class="row">
+				<div class="col card">
+					<div class="card-body">
+						<h5 class="card-title" id="cityName"></h5>
+						<div id="insertSvg"></div>
+						<p class="card-text" id="currentTemp"></p>
+					</div>
+					<hr />
+					<div id="carouselExample" class="carousel slide">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<div class="row">
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour1"></div></div>
+										<div class="row" id="iconWeatherTime1"></div>
+										<div class="row"><div class="text-center" id="temp1"></div></div>
+									</div>
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour2"></div></div>
+										<div class="row" id="iconWeatherTime2"></div>
+										<div class="row"><div class="text-center" id="temp2"></div></div>
+									</div>
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour3"></div></div>
+										<div class="row" id="iconWeatherTime3"></div>
+										<div class="row"><div class="text-center" id="temp3"></div></div>
+									</div>
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour4"></div></div>
+										<div class="row" id="iconWeatherTime4"></div>
+										<div class="row"><div class="text-center" id="temp4"></div></div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour5"></div></div>
+										<div class="row" id="iconWeatherTime5"></div>
+										<div class="row"><div class="text-center" id="temp5"></div></div>
+									</div>
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour6"></div></div>
+										<div class="row" id="iconWeatherTime6"></div>
+										<div class="row"><div class="text-center" id="temp6"></div></div>
+									</div>
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour7"></div></div>
+										<div class="row" id="iconWeatherTime7"></div>
+										<div class="row"><div class="text-center" id="temp7"></div></div>
+									</div>
+									<div class="col container">
+										<div class="row"><div class="text-center" id="hour8"></div></div>
+										<div class="row" id="iconWeatherTime8"></div>
+										<div class="row"><div class="text-center" id="temp8"></div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<button
+							class="carousel-control-prev"
+							type="button"
+							data-bs-target="#carouselExample"
+							data-bs-slide="prev"
+						>
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button
+							class="carousel-control-next"
+							type="button"
+							data-bs-target="#carouselExample"
+							data-bs-slide="next"
+						>
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 			crossorigin="anonymous"
 		></script>
+		<script src="/script/setnext24h.js" type="module"></script>
+		<script src="/script/setCurrentWeather.js" type="module"></script>
 	</body>
 </html>
