--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
 		/>
-		<script src="/script/getCityCoordinates.js" type="module"></script>
-		<script src="/script/getWeatherData.js" type="module"></script>
-		<script src="/script/getImportantData.js" type="module"></script>
-		<script src="/script/uniTimestampToDate.js" type="module"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm bg-body-tertiary" data-bs-theme="dark">
@@ -36,37 +32,53 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-					<form class="d-flex" role="search">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-						<button class="btn btn-outline-success btn-dark" type="button">Search</button>
+					<form class="d-flex" role="none" onsubmit="return false">
+						<input
+							class="form-control me-2"
+							type="search"
+							placeholder="Search"
+							aria-label="Search"
+							id="citySearch"
+						/>
+						<button
+							class="btn btn-outline-success btn-dark"
+							type="button"
+							id="searchButton"
+							onclick="setDataInPage();"
+						>
+							Search
+						</button>
 					</form>
 				</div>
 			</div>
 		</nav>
-		<div class="container-sm card text-center mt-3">
-			<div class="row">
-				<div class="col card">
-					<div class="card-body">
-						<h5 class="card-title" id="cityName"></h5>
+		<div class="container-sm text-center mt-3 border border-black rounded">
+			<div class="row pb-3">
+				<div class="col">
+					<div class="">
+						<div class="card-title display-3" id="cityName"></div>
 						<div id="insertSvg"></div>
 						<p class="card-text" id="currentTemp"></p>
 					</div>
-					<hr />
+				</div>
+			</div>
+			<div class="row border-top border-black">
+				<div class="col">
 					<div id="carouselExample" class="carousel slide">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<div class="row">
-									<div class="col container">
+									<div class="col container border-end border-black">
 										<div class="row"><div class="text-center" id="hour1"></div></div>
 										<div class="row" id="iconWeatherTime1"></div>
 										<div class="row"><div class="text-center" id="temp1"></div></div>
 									</div>
-									<div class="col container">
+									<div class="col container border-end border-black">
 										<div class="row"><div class="text-center" id="hour2"></div></div>
 										<div class="row" id="iconWeatherTime2"></div>
 										<div class="row"><div class="text-center" id="temp2"></div></div>
 									</div>
-									<div class="col container">
+									<div class="col container border-end border-black">
 										<div class="row"><div class="text-center" id="hour3"></div></div>
 										<div class="row" id="iconWeatherTime3"></div>
 										<div class="row"><div class="text-center" id="temp3"></div></div>
@@ -80,17 +92,17 @@
 							</div>
 							<div class="carousel-item">
 								<div class="row">
-									<div class="col container">
+									<div class="col container border-end border-black">
 										<div class="row"><div class="text-center" id="hour5"></div></div>
 										<div class="row" id="iconWeatherTime5"></div>
 										<div class="row"><div class="text-center" id="temp5"></div></div>
 									</div>
-									<div class="col container">
+									<div class="col container border-end border-black">
 										<div class="row"><div class="text-center" id="hour6"></div></div>
 										<div class="row" id="iconWeatherTime6"></div>
 										<div class="row"><div class="text-center" id="temp6"></div></div>
 									</div>
-									<div class="col container">
+									<div class="col container border-end border-black">
 										<div class="row"><div class="text-center" id="hour7"></div></div>
 										<div class="row" id="iconWeatherTime7"></div>
 										<div class="row"><div class="text-center" id="temp7"></div></div>
@@ -130,7 +142,6 @@
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 			crossorigin="anonymous"
 		></script>
-		<script src="/script/setnext24h.js" type="module"></script>
-		<script src="/script/setCurrentWeather.js" type="module"></script>
+		<script src="/script/app.js" type="module"></script>
 	</body>
 </html>
